--- a/app/views/pages/about.ro.html.erb
+++ b/app/views/pages/about.ro.html.erb
@@ -2,13 +2,15 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
+    <p class="col-sm-12">
         <b>INTERNATIONAL STUDY CENTRE for EDUCATIONAL OPPORTUNITIES (ISCEO)</b> este un centru educaţional care le
         oferă tuturor celor interesaţi de dezvoltarea personală, atît din perspectiva competenţelor academice, cît şi
         cea a abilităţilor socio-emoţionale, şansa de a trăi experienţa lucrului în tandem al Limbilor străine şi
         Psihologiei.
-      </p>
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-sm-7 static">
       <p>
         Activitatea pe care o desfăşurăm îşi are începutul în anul 2004, cînd, în premieră pentru Republica Moldova,
         o echipă de profesori bine pregătiţi, specializaţi în predarea limbii engleze şi psihologie, cu stagii în şcoli
@@ -19,16 +21,17 @@
         la dorinţa discipolilor noştri, să organizăm prima călătorie în Marea Britanie.
       </p>
     </div>
-    <div class="col-sm-4">
-      insert image
+    <div class="col-sm-5">
+      <%= image_tag 'about_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-4">
-      insert image
+    <div class="col-sm-5">
+      <%= image_tag 'about_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         Următorii cinci ani (2008-2012) au servit drept cinci trepte valoroase în creşterea noastră profesională, care
         s-au soldat cu stabilirea unor relaţii preţioase de parteneriat cu instituţii educaţionale din Marea Britanie,
         Europa şi SUA. Din vara anului 2008 suntem reprezentanţi oficiali ai companiei britanice Studio Cambridge în
@@ -39,7 +42,11 @@
         simpleţea şi pozitivismul oamenilor. Mai mult ca atît, avem discipoli care îşi continuă studiile în licee,
         colegii şi universităţi britanice, europene şi americane.
       </p>
-      <p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7">
         Pe parcurs am obţinut titlul de consultanţi educaţionali pentru King's School Ely, Cambridge Centre for Six-Form
         Studies, Cambridge Academy of English, Bellerbys College, CATS College, International Projects, Actilingua
         Academy. În anul 2013, an ce a marcat aniversarea a zecea a activităţii noastre, am oferit noi oportunităţi
@@ -49,8 +56,9 @@
         concursul naţional "English Skills Championship" (ESC) continuat în 2014 în parteneriat cu King's School Ely.
         În cadrul acestuia, cîştigătorii premiului întîi obţin burse de studiu la Şcoli de Vară din Marea Britanie. Cum
         am obişnuit, oferim continuitate şi calitate în materie de pregătire pentru viaţă a elevilor noştri.
-      </p>
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'about_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
 </div>
-
