--- a/app/views/pages/about.ru.html.erb
+++ b/app/views/pages/about.ru.html.erb
@@ -2,13 +2,15 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
+    <p class="col-sm-12">
         <b>INTERNATIONAL STUDY CENTRE for EDUCATIONAL OPPORTUNITIES (ISCEO)</b> это образовательный центр, который
         предлагает всем, кто заинтересован в личном развитие, с точки зрения академических компетенций и
         социально-эмоциональных навыков, возможность испытать, чего может достичь совместная работа по иностранным
         языкам и психологии.
-      </p>
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-sm-7 static">
       <p>
         Мы начали свою карьеру в 2004 году, когда впервые в Молдове была организована команда хорошо подготовленных
         учителей, специализирующихся на преподавании английского языка и психологии, с опытом работы в школах из
@@ -19,16 +21,17 @@
         в Великобританию.
       </p>
     </div>
-    <div class="col-sm-4">
-      insert image
+    <div class="col-sm-5">
+      <%= image_tag 'about_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-4">
-      insert image
+    <div class="col-sm-5">
+      <%= image_tag 'about_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         Следующие пять лет (2008-2012 гг.) послужили пятью цтенным шагов в нашем профессиональном росте, которые привели
         к установлению ценных партнерских отношений с образовательными учреждениями в Великобритании, Европе и США.
         Мы являемся официальными представителями британской компании Studio Cambridge в Республике Молдова с лета
@@ -39,7 +42,11 @@
         позитивизмом людей. Кроме того, у нас есть ученики, которые продолжают обучение в британских, европейских и
         американских средних школах, колледжах и университетах.
       </p>
-      <p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7">
         На протяжении многих лет мы были удостоены звания консультантов в области образования для King's School Ely,
         Cambridge Centre for Six-Form Studies, Cambridge Academy of English, Bellerbys College, CATS College,
         International Projects, Actilingua Academy. В 2013 году, когда отмечалось 10-летие нашей работы, мы предложили
@@ -49,8 +56,9 @@
         Championship (ESC), который продолжился в 2014 году в партнерстве с King's School Ely. В рамках него победители
         первой премии получили стипендии в летних школах в Великобритании. Как мы привыкли, мы продолжаем предлагать
         качество в подготовке наших студентов к жизни, которая их ожидает.
-      </p>
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'about_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
 </div>
-
