--- a/app/views/pages/academic_program.en.html.erb
+++ b/app/views/pages/academic_program.en.html.erb
@@ -1,7 +1,8 @@
 <% provide(:title, t('Academic program')) %>
+
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>International Study Centre for Educational Opportunities</b> offers an English language study program
         different from other options on the market because of the individual approach of each student, small study
@@ -10,15 +11,16 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>1. FOREIGN LANGUAGE WITH PERSONALITY.</b> At ISCEO, modern methods in the field of Foreign Language Learning
         Psychology are tailored to the individual peculiarities of each student. Under the professional guidance of
         our psychologists, Foreign Language works in tandem with Psychology, so at ISCEO is a Foreign Language is learned
@@ -26,8 +28,9 @@
       </p>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>2. SMALL STUDY GROUPS.</b> The foreign language lesson at ISCEO is organized with small groups of 2-6 pupils
         each, which facilitates pupils' socialization, while providing the temporal space necessary to manifest
@@ -36,23 +39,25 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_4.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>3. TESTING the LEVEL of DEVELOPMENT of LINGUISTIC COMPETENCE</b> is the first step in the individual approach
         of each student. We also use a battery of psychological tests, at the request of either the pupil or his / her
         parents, to develop a working strategy as faithful to the pupil's psychological portrait as possible.
       </p>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>4. THE LITERATURE EDITED by OXFORD and CAMBRIDGE</b> is a valuable asset in the work we perform. The manuals
         accompanied by workbooks, CDs and audio / video discs are apt to awaken and maintain the optimal motivation of
@@ -60,15 +65,17 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_5.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
+    <br>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_6.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>5. A big VARIETY of PROGRAMS for EVERY AGE GROUP.</b> ISCEO offers quality and continuity through multiple
         educational opportunities created for different ages: children, pre-adolescents, teenagers, adults, in order
         to help them grow both academically and personally.
@@ -76,7 +83,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>6. MULTIPLE EDUCATIONAL OPPORTUNITIES.</b> The diversified services we provide transforms the foreign language
         from just school subject into a linguistic motivation able to guide our disciples in real life situations: from
@@ -85,15 +92,16 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_7.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_8.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>7. PREPARATION FOR NATIONAL EXAMINATIONS</b> (Bacalaureate) and <b>INTERNATIONAL EXAMINATION</b> (TOEFL and
         IELTS) comes in support of those seeking to improve their school results in the Republic of Moldova and those
         who are going to continue their studies abroad. This course takes place both during the academic year and during
@@ -103,4 +111,3 @@
     </div>
   </div>
 </div>
-
