--- a/app/views/pages/academic_program.ro.html.erb
+++ b/app/views/pages/academic_program.ro.html.erb
@@ -1,7 +1,8 @@
 <% provide(:title, t('Academic program')) %>
+
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>International Study Centre for Educational Opportunities</b> oferă un program de studiere a limbii engleze
         diferit de altele prin abordarea individuală a fiecărui elev, grupurile mici de studiu, sisteme standardizate,
@@ -10,15 +11,16 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>1. LIMBA STRĂINĂ cu PERSONALITATE.</b> La ISCEO metodele moderne din domeniul Psihologiei învăţării unei
         Limbi străine sunt adaptate la particularităţile individuale ale fiecărui elev. Sub îndrumarea profesionistă
         a psihologilor noştri, Limba Străină lucrează în tandem cu Psihologia, de aceea la ISCEO se face Limba Străină
@@ -26,8 +28,9 @@
       </p>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>2. GRUPURI MICI de STUDIU.</b> Ora de limbă străină la ISCEO se realizează cu grupuri mici, a cîte 2-6 elevi
         fiecare, fapt care facilitează socializarea elevilor, oferind totodată spaţiul temporal necesar manifestării
@@ -36,15 +39,16 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_4.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>3. TESTAREA NIVELULUI de DEZVOLTARE a COMPETENŢELOR LINGVISTICE</b> este primul pas în abordarea
         individuală a fiecărui elev. Obişnuim să administrăm şi o baterie de teste psihologice, la dorinţa fie a
         elevului sau a părinţilor acestuia, pentru a elabora o strategie de lucru cît mai fidelă portretului psihologic
@@ -52,8 +56,9 @@
       </p>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>4. LITERATURA EDITATĂ de OXFORD şi CAMBRIDGE</b> este un instrument valoros în activitatea pe care o
         desfaşurăm. Manualele insoţite de caieţele de lucru, CD-uri şi discuri audio/video sunt apte să trezească şi
@@ -62,15 +67,17 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_5.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
+    <br>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_6.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>5. OFERTE VARIATE pentru FIECARE VÎRSTĂ.</b> ISCEO oferă calitate şi continuitate prin oportunităţile
         educaţionale multiple create pentru vîrste diferite: copii, preadolescenţi/adolescenţi, tineri, adulţi în
         vederea creşterii acestora atît în plan academic cît şi personal.
@@ -78,25 +85,25 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>6. OPORTUNITĂŢI EDUCAŢIONALE MULTIPLE.</b> Serviciile diversificate pe care le prestăm transformă limba
         străină dintr-o materie şcolară într-o motivaţie lingvistică aptă de a ne ghida discipolii în cadrul
         situaţiilor reale de viaţă: de la lecţii audio/ video la discuţii cu vorbitori nativi, atît pe parcursul
         anului academic, cît şi în cadrul şcolilor de vacanţă, cu sejur de zi şi nocturn, pe care le oferim cu multă
         pasiune.
-      </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_7.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_8.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>7. PREGĂTIREA pentru EXAMENE NAŢIONALE</b> (Bacalaureat) <b>şi INTERNAŢIONALE</b> (TOEFL şi IELTS) vine în
         susţinerea doritorilor de a-şi îmbunătăţi rezultatele şcolare în Republica Moldova şi a celora care urmează
         să-şi continue studiile în străinătate. Acest curs se realizează atît pe parcursul anului academic, cît şi în
@@ -106,4 +113,3 @@
     </div>
   </div>
 </div>
-
