--- a/app/views/pages/home.en.html.erb
+++ b/app/views/pages/home.en.html.erb
@@ -25,14 +25,15 @@
   </a>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-      <p>
+    <div class="row">
+      <p class="col-sm-12" style="font-weight: 400;">
         <b>International Study Centre for Educational Opportunities (ISCEO)</b> is an educational centre that offers the
         chance to experience Foreign languages working together with Psychology to everyone interested in it personal
         development.
       </p>
-      <p>
+    </div>
+  <div class="row">
+      <p class="col-sm-7 static">
         Learning a foreign language can be considered to be a social event, different from any other school subject,
         because a language belongs to the social part of the human nature, it is part of a human's identity. Studying a
         foreign language involves a lot more than just someone's ability to learn and understand a set of well defined
@@ -40,18 +41,24 @@
         social and cultural point of view and that's why its impact on your life's social aspect and on your personality
         (regardless of age) is very significant.
       </p>
-      <p>
-        We are happy to share what we know to help You become what You can be, so that just like
-        <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf">Richard Bach's seagull</a>
-        You can raise over the crowd, harnessing all your potential, because out of all the amazing truths regarding a
-        human's soul that were developed and expressed by the great thinkers of the 20<sup>th</sup> century, none is more
-        gratifying that this one:
-      </p>
-    </div>
-    <div class="col-sm-4">
-      Insert image
+    <div class="col-sm-5">
+      <%= image_tag 'home_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7">
+      We are happy to share what we know to help You become what You can be, so that just like
+      <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf">Richard Bach's seagull</a>
+      You can raise over the crowd, harnessing all your potential, because out of all the amazing truths regarding a
+      human's soul that were developed and expressed by the great thinkers of the 20<sup>th</sup> century, none is more
+      gratifying that this one:
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'home_2.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+  </div>
+  <br>
   <div class="row col-sm-12">
     <blockquote class="blockquote text-right">
       <p class="mb-0">
