--- a/app/views/pages/home.ro.html.erb
+++ b/app/views/pages/home.ro.html.erb
@@ -26,33 +26,40 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        <b>International Study Centre for Educational Opportunities (ISCEO)</b> este un centru educaţional care le
-        oferă tuturor celor interesaţi de dezvoltarea personală şansa de a trăi experienţa lucrului în tandem al
-        Limbilor străine cu Psihologia.
-      </p>
-      <p>
-        Învăţarea unei limbi străine este un adevărat eveniment social, diferit de învăţarea oricărei alte discipline
-        şcolare, deoarece limba aparţine laturii sociale a fiinţei umane şi ea este parte a identităţii acesteia.
-        Învăţarea limbii străine implică mult mai multe decît doar abilităţi de învăţare sau sistem de reguli, ori
-        gramatică; ea implică o schimbare a imaginii de sine, adoptarea unor comportamente noi din punct de vedere
-        social şi cultural, a unor feluri de a fi şi de aceea impactul ei asupra laturii sociale a personalităţii
-        (indiferent de vîrstă) este foarte semnificativ.
-      </p>
-      <p>
-        Suntem bucuroşi să Vă împărtăşim ceea ce cunoaştem pentru a Vă ajuta să deveniţi ceea ce aţi fi, astfel încît,
-        asemeni <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf"> pescăruşului
-        lui Richard Bach</a>, să puteţi să Vă ridicaţi deasupra mulţimii, valorificîndu-Vă la maxim potenţialul cu care
-        sunteţi înzestraţi, fiindcă dintre toate adevărurile minunate referitoare la suflet care au fost regăsite şi
-        scoase la lumină de către marii gînditori ai secolului 20, nici unul nu e mai îmbucurător sau mai plin de
-        promisiuni divine şi încredere decît acesta:
-      </p>
-    </div>
-    <div class="col-sm-4">
-      Insert image
+    <p class="col-sm-12" style="font-weight: 400;">
+      <b>International Study Centre for Educational Opportunities (ISCEO)</b> este un centru educaţional care le
+      oferă tuturor celor interesaţi de dezvoltarea personală şansa de a trăi experienţa lucrului în tandem al
+      Limbilor străine cu Psihologia.
+    </p>
+  </div>
+  <div class="row">
+    <p class="col-sm-7 static">
+      Învăţarea unei limbi străine este un adevărat eveniment social, diferit de învăţarea oricărei alte discipline
+      şcolare, deoarece limba aparţine laturii sociale a fiinţei umane şi ea este parte a identităţii acesteia.
+      Învăţarea limbii străine implică mult mai multe decît doar abilităţi de învăţare sau sistem de reguli, ori
+      gramatică; ea implică o schimbare a imaginii de sine, adoptarea unor comportamente noi din punct de vedere
+      social şi cultural, a unor feluri de a fi şi de aceea impactul ei asupra laturii sociale a personalităţii
+      (indiferent de vîrstă) este foarte semnificativ.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'home_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7">
+      Suntem bucuroşi să Vă împărtăşim ceea ce cunoaştem pentru a Vă ajuta să deveniţi ceea ce aţi fi, astfel încît,
+      asemeni <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf"> pescăruşului
+      lui Richard Bach</a>, să puteţi să Vă ridicaţi deasupra mulţimii, valorificîndu-Vă la maxim potenţialul cu care
+      sunteţi înzestraţi, fiindcă dintre toate adevărurile minunate referitoare la suflet care au fost regăsite şi
+      scoase la lumină de către marii gînditori ai secolului 20, nici unul nu e mai îmbucurător sau mai plin de
+      promisiuni divine şi încredere decît acesta:
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'home_2.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+  </div>
+  <br>
   <div class="row col-sm-12">
     <blockquote class="blockquote text-right">
       <p class="mb-0">
