--- a/app/views/pages/home.ru.html.erb
+++ b/app/views/pages/home.ru.html.erb
@@ -26,32 +26,44 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        <b>International Study Centre for Educational Opportunities (ISCEO)</b> это образовательный центр, который предлагает
-        возможность познакомиться с иностранными языками в сотрудничестве с психологом для всех, кто заинтересован в этом лично
-        развитие.
-      </p>
-      <p>
-        Изучение иностранного языка можно считать общественным мероприятием, отличным от любого другого школьного предмета,
-        поскольку язык принадлежит социальной части человеческой природы, он является частью человеческой идентичности. Изучая
-        Иностранный язык включает в себя гораздо больше, чем просто способность кого-то учиться и понимать набор четко определенных
-        правила или грамматика; это включает изменение в восприятии себя, принятие нового поведения от
-        социальная и культурная точка зрения, и поэтому она влияет на социальный аспект вашей жизни и на вашу личность
-        (независимо от возраста) очень значимо.
-      </p>
-      <p>
-        Мы рады поделиться тем, что мы знаем, чтобы помочь Вам стать тем, кем Вы можете быть, чтобы, подобно
-        <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf">чайке Ричарда Баха</a>,
-        Вы могли подняться над толпой, используя весь свой потенциал, потому что из всех удивительных истин, касающихся
-        человеческая душа, которая была развита и выражена великими мыслителями 20-го века, никто не более
-        Отрадно, что это:
-      </p>
-    </div>
-    <div class="col-sm-4">
-      Insert image
+    <p class="col-sm-12" style="font-weight: 400;">
+      <b>International Study Centre for Educational Opportunities (ISCEO)</b> это образовательный центр, который
+      предлагает
+      возможность познакомиться с иностранными языками в сотрудничестве с психологом для всех, кто заинтересован в этом
+      лично
+      развитие.
+    </p>
+  </div>
+  <div class="row">
+    <p class="col-sm-7 static">
+      Изучение иностранного языка можно считать общественным мероприятием, отличным от любого другого школьного
+      предмета,
+      поскольку язык принадлежит социальной части человеческой природы, он является частью человеческой идентичности.
+      Изучая
+      Иностранный язык включает в себя гораздо больше, чем просто способность кого-то учиться и понимать набор четко
+      определенных
+      правила или грамматика; это включает изменение в восприятии себя, принятие нового поведения от
+      социальная и культурная точка зрения, и поэтому она влияет на социальный аспект вашей жизни и на вашу личность
+      (независимо от возраста) очень значимо.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'home_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7">
+      Мы рады поделиться тем, что мы знаем, чтобы помочь Вам стать тем, кем Вы можете быть, чтобы, подобно
+      <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf">чайке Ричарда Баха</a>,
+      Вы могли подняться над толпой, используя весь свой потенциал, потому что из всех удивительных истин, касающихся
+      человеческая душа, которая была развита и выражена великими мыслителями 20-го века, никто не более
+      Отрадно, что это:
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'home_2.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+  </div>
+  <br>
   <div class="row col-sm-12">
     <blockquote class="blockquote text-right">
       <p class="mb-0">
