--- a/app/views/pages/vacation_school.en.html.erb
+++ b/app/views/pages/vacation_school.en.html.erb
@@ -2,14 +2,17 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        The "English School for Communication" program offers children interested in studying English, British and
-        American traditions a possibility to practice the language and improve their linguistics skills. The educational
-        and entertaining character of the course creates an optimal ambiance for learning, relaxing and socializing
-        in an environment where English is the only language people communicate in. The program is based on the British
-        model of organising a vacation school.
-      </p>
+    <p class="col-sm-12">
+      The "English School for Communication" program offers children interested in studying English, British and
+      American traditions a possibility to practice the language and improve their linguistics skills. The educational
+      and entertaining character of the course creates an optimal ambiance for learning, relaxing and socializing
+      in an environment where English is the only language people communicate in. The program is based on the British
+      model of organising a vacation school.
+    </p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7 static">
       <h4>INSTRUCTION-EDUCATIONAL STRUCTURE</h4>
       <p>
         The instructional-educational structure is done during the academic hours, which differ significantly from the
@@ -23,11 +26,25 @@
         <li>Drama and Theatrical Performances;</li>
         <li>Social Arts.</li>
       </ul>
-      <p>
-        Personal development of children takes place in psychological trainings professionally conducted by our
-        psychologists. During training sessions, we help children discover themselves and others, give intelligence to
-        the emotions they live, express and build harmonious interpersonal relationships with others.
-      </p>
+    </div>
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+    <p class="col-sm-7 static">
+      Personal development of children takes place in psychological trainings professionally conducted by our
+      psychologists. During training sessions, we help children discover themselves and others, give intelligence to
+      the emotions they live, express and build harmonious interpersonal relationships with others.
+    </p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7">
       <h4>FUN STRUCTURE</h4>
       <p>
         Based on the fact that the participants are still on vacation and dreaming at a break away from the school
@@ -42,8 +59,8 @@
         <li>Music and dance performances.</li>
       </ul>
     </div>
-    <div class="col-sm 4">
-      image x3
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
 </div>
