--- a/app/views/pages/vacation_school.ro.html.erb
+++ b/app/views/pages/vacation_school.ro.html.erb
@@ -2,14 +2,17 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
+    <p class="col-sm-12">
         Programul "Şcoala de Vacanță. Engleza în scop de comunicare" le oferă copiilor interesaţi de studierea limbii
         engleze, a tradiţiilor britanice şi americane o posibilitate ideală de practicare a limbii şi îmbunătăţire
         a deprinderilor lingvistice. Caracterul educativ şi distractiv, în acelaşi timp, al cursului creează o ambianţă
         optimă pentru învăţare, relaxare şi socializare într-un mediu în care se comunică doar în limba engleză.
         Programul se bazează pe modelul britanic de organizare a şcolilor de vacanţă.
-      </p>
+    </p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7 static">
       <h4>COMPONENŢA INSTRUCTIV-EDUCATIVĂ</h4>
       <p>
         Componenta instructiv-educativă se realizeaza în timpul orelor academice, care se deosebesc semnificativ de
@@ -23,12 +26,26 @@
           <li>Drama şi Confecţiile Teatrale;</li>
           <li>Artele Sociale.</li>
         </ul>
-      <p>
+    </div>
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+    <p class="col-sm-7 static">
         Dezvoltarea personală a copiilor se realizează în cadrul training-urilor psihologice conduse cu profesionalism
         de către psihologii noştri. Pe parcursul şedinţelor de training îi ajutăm pe copii să se descopere pe sine şi
         pe alţii, să dea inteligenţă emoţiilor pe care le trăiesc, să se exprime şi să construiască relaţii
         interpersonale armonioase cu cei din jur.
-      </p>
+    </p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7">
       <h4>COMPONENŢA DISTRACTIVĂ</h4>
       <p>
         Reieşind din faptul că participanţii se află totuşi în vacanţă şi visează la o pauză departe de rutina şcolară,
@@ -43,8 +60,8 @@
         <li>Spectacole de muzică şi dans.</li>
       </ul>
     </div>
-    <div class="col-sm 4">
-      image x3
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
 </div>
