--- a/app/views/pages/vacation_school.ru.html.erb
+++ b/app/views/pages/vacation_school.ru.html.erb
@@ -2,14 +2,17 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
+    <p class="col-sm-12">
         Программа «Английская школа общения» предлагает детям, заинтересованным в изучении английских, британских и
         американских традиций, возможность практиковать язык и совершенствовать свои лингвистические навыки.
         Образовательный и развлекательный характер курса создает оптимальную атмосферу для обучения, отдыха и общения
         в среде, где английский является единственным языком общения людей. Программа основана на британской модели
         организации школы каникул.
-      </p>
+    </p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7 static">
       <h4>ИНСТРУКЦИОННО-ОБРАЗОВАТЕЛЬНАЯ СТРУКТУРА</h4>
       <p>
         Учебно-воспитательная структура создается в течение академических часов, которые значительно отличаются от
@@ -23,11 +26,25 @@
         <li>Драматические и театральные постановки;</li>
         <li>Социальные искусства.</li>
       </ul>
-      <p>
+    </div>
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+    <p class="col-sm-7 static">
         Личное развитие детей проходит на психологических тренингах, которые профессионально проводят наши психологи.
         Во время учебных занятий мы помогаем детям раскрыть себя и других, привносить интеллект в переживаемые ими
         эмоции, выражать и строить гармоничные межличностные отношения с другими.
-      </p>
+    </p>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-7">
       <h4>ЗАБАВНАЯ СТРУКТУРА</h4>
       <p>
         Исходя из того, что участники все еще находятся в отпуске и мечтают оторваться от школьной рутины, мы
@@ -42,8 +59,8 @@
         <li>Музыкальные и танцевальные выступления.</li>
       </ul>
     </div>
-    <div class="col-sm 4">
-      image x3
+    <div class="col-sm-5">
+      <%= image_tag 'vacation_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
 </div>
