--- a/app/views/pages/weekend_school.en.html.erb
+++ b/app/views/pages/weekend_school.en.html.erb
@@ -2,18 +2,23 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
+      <p class="col-sm-7 static">
         The spirit of the Vacation Schools is kept alive and active through the Weekend School that is being held every
         Saturday starting in September. We propose a new event format that includes offers for all ages and tastes.
         With ISCEO, the charm of holiday days lives all year round.
       </p>
+    <div class="col-sm-5">
+      <%= image_tag 'weekend_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
       <br>
       <br>
       <h4>Example of a daily timetable</h4>
       <br>
       <br>
-      <table class="table table-hover">
+      <table class="table table-hover" style="text-align: center">
         <thead>
         <tr>
           <th>#</th>
@@ -50,8 +55,6 @@
         </tbody>
       </table>
     </div>
-    <div class="col-sm-4">
-      insert image
-    </div>
   </div>
-</div>
+
+  </div>
