--- a/app/views/pages/weekend_school.ro.html.erb
+++ b/app/views/pages/weekend_school.ro.html.erb
@@ -2,18 +2,22 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        Spiritul Şcolilor de Vacanţă se menţine viu şi activ prin intermediul Şcolii de Weekend care se realizează în
-        fiecare sîmbătă începînd cu luna septembrie. Va propunem un nou format de eveniment care include oferte pentru
-        toate vîrstele şi gusturile. Cu ISCEO farmecul zilelor de vacanţă trăieşte tot anul. Vă aşteptăm cu drag.
-      </p>
+    <p class="col-sm-7 static">
+      Spiritul Şcolilor de Vacanţă se menţine viu şi activ prin intermediul Şcolii de Weekend care se realizează în
+      fiecare sîmbătă începînd cu luna septembrie. Va propunem un nou format de eveniment care include oferte pentru
+      toate vîrstele şi gusturile. Cu ISCEO farmecul zilelor de vacanţă trăieşte tot anul. Vă aşteptăm cu drag.
+    <div class="col-sm-5">
+      <%= image_tag 'weekend_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
       <br>
       <br>
       <h4>Exemplu de Orar zilnic</h4>
       <br>
       <br>
-      <table class="table table-hover">
+      <table class="table table-hover" style="text-align: center">
         <thead>
         <tr>
           <th>#</th>
@@ -49,9 +53,6 @@
         </tr>
         </tbody>
       </table>
-    </div>
-    <div class="col-sm-4">
-      insert image
     </div>
   </div>
 </div>
