--- a/app/views/pages/weekend_school.ru.html.erb
+++ b/app/views/pages/weekend_school.ru.html.erb
@@ -2,18 +2,23 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        Дух Школ каникул поддерживается и развивается благодаря Школе выходных, которая проводится каждую субботу,
-        начиная с сентября. Мы предлагаем новый формат мероприятия, который включает в себя предложения для всех
-        возрастов и вкусов. С ISCEO очарование праздничных дней живет круглый год.
-      </p>
+    <p class="col-sm-7 static">
+      Дух Школ каникул поддерживается и развивается благодаря Школе выходных, которая проводится каждую субботу,
+      начиная с сентября. Мы предлагаем новый формат мероприятия, который включает в себя предложения для всех
+      возрастов и вкусов. С ISCEO очарование праздничных дней живет круглый год.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'weekend_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
       <br>
       <br>
-      <h4>Example of a daily timetable</h4>
+      <h4>Пример ежедневного расписания</h4>
       <br>
       <br>
-      <table class="table table-hover">
+      <table class="table table-hover" style="text-align: center">
         <thead>
         <tr>
           <th>#</th>
@@ -49,9 +54,6 @@
         </tr>
         </tbody>
       </table>
-    </div>
-    <div class="col-sm-4">
-      insert image
     </div>
   </div>
 </div>
