--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,7 +21,7 @@
       <!-- Copyright -->
       <div class="col-sm-4">
         <ul class="right">
-          <li><%= link_to t(:Help), help_path %></li>
+          <li><%= link_to t(:Home), root_path %></li>
           <li><%= link_to t(:About), about_path %></li>
           <li><%= link_to t(:Contact), contact_path %></li>
         </ul>
