--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
               <li><%= link_to t('Vacation school'), vacation_school_path, class: 'dropdown-item', tabindex: '-1' %></li>
             </ul>
           </li>
-          <li class="nav-item"><%= link_to t('Getting ready for school'), getting_ready_for_school_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to t("Children's workshop"), workshop_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to t('International camps'), international_camps_path, class: "nav-link" %></li>
           <% if user_signed_in? %>
             <li class="nav-item dropdown">
