--- a/app/views/pages/about.en.html.erb
+++ b/app/views/pages/about.en.html.erb
@@ -2,33 +2,37 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        <b>INTERNATIONAL STUDY CENTRE for EDUCATIONAL OPPORTUNITIES (ISCEO)</b> is an educational center that offers to
-        everyone interested in personal development, both from the perspective of academic competences, as well
-        socio-emotional skills, the chance to experience firsthand what the work of foreign languages and Psychology
-        together can achieve.
-      </p>
+    <p class="col-sm-12">
+      <b>INTERNATIONAL STUDY CENTRE for EDUCATIONAL OPPORTUNITIES (ISCEO)</b> is an educational center that offers to
+      everyone interested in personal development, both from the perspective of academic competences, as well
+      socio-emotional skills, the chance to experience firsthand what the work of foreign languages and Psychology
+      together can achieve.
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-sm-7 static">
       <p>
         We started out journery back in 2004 when, for the first time in Moldova, a team of well-trained teachers,
         specialized in teaching English and psychology, with the experience of working in schools
-        from the United Kingdom and the US under their belts, organized a British summer school. This unique project, titled
+        from the United Kingdom and the US under their belts, organized a British summer school. This unique project,
+        titled
         "Opportunities for Everyone," has nicely combined relaxation, fun and learning. The interaction of three
         programs: fun, instructive and educational was done in accordance with the principle of "blending pleasure
         with business." For four consecutive years (2004-2007), our team worked with 478 children, because in 2008,
         at the desire of our disciples, we organized our first trip to the UK.
       </p>
     </div>
-    <div class="col-sm-4">
-      insert image
+    <div class="col-sm-5">
+      <%= image_tag 'about_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-4">
-      insert image
+    <div class="col-sm-5">
+      <%= image_tag 'about_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         The next five years (2008-2012) served as five valuable steps in our professional growth, which
         have led to the establishment of precious partnership relationships with educational institutions in the UK,
         Europe and the US. We have been the official representatives of the british company Studio Cambridge in the
@@ -39,18 +43,23 @@
         and, at the same time, simplicity and positivism of people. Moreover, we have disciples who continue their
         studies in British, European and American high schools, colleges and universities.
       </p>
-      <p>
-        Over the years we have been awarded the title of educational consultants for King's School Ely, Cambridge Center
-        for Six-Form Studies, Cambridge Academy of English, Bellerbys College, CATS College, International Projects,
-        Actilingua Academy. In 2013, the year that marked the 10<sup>th</sup> anniversary of our work, we offered new
-        educational opportunities (weekend schools, personalized English language courses for both children and adults)
-        alongside those already in progress (vacation schools in the Republic of Moldova and the United Kingdom). For
-        the first time, the International Center for Educational Opportunities in partnership with Studio Cambridge
-        launched the English Skills Championship (ESC), which continued in 2014 in partnership with King's School Ely.
-        Within it, the winners of the first prize received scholarships at Summer Schools in the UK. As we are
-        accustomed to, we continue to offer quality in the preparing our students for the life that awaits them.
-      </p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7">
+      Over the years we have been awarded the title of educational consultants for King's School Ely, Cambridge Center
+      for Six-Form Studies, Cambridge Academy of English, Bellerbys College, CATS College, International Projects,
+      Actilingua Academy. In 2013, the year that marked the 10<sup>th</sup> anniversary of our work, we offered new
+      educational opportunities (weekend schools, personalized English language courses for both children and adults)
+      alongside those already in progress (vacation schools in the Republic of Moldova and the United Kingdom). For
+      the first time, the International Center for Educational Opportunities in partnership with Studio Cambridge
+      launched the English Skills Championship (ESC), which continued in 2014 in partnership with King's School Ely.
+      Within it, the winners of the first prize received scholarships at Summer Schools in the UK. As we are
+      accustomed to, we continue to offer quality in the preparing our students for the life that awaits them.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'about_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
 </div>
-
