--- a/app/views/pages/academic_program.ru.html.erb
+++ b/app/views/pages/academic_program.ru.html.erb
@@ -1,7 +1,8 @@
 <% provide(:title, t('Academic program')) %>
+
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>International Study Centre for Educational Opportunities</b> предлагает программу изучения английского языка,
         отличную от других доступных на рынке, из-за индивидуального подхода каждого студента, небольших учебных групп,
@@ -10,15 +11,16 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_1.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_2.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>1. ИНОСТРАННЫЙ ЯЗЫК С ЛИЧНОСТЬЮ.</b> В ISCEO современные методы в области психологии обучения иностранному
         языку адаптированы к индивидуальным особенностям каждого учащегося. Под профессиональным руководством наших
         психологов иностранный язык работает в тандеме с психологией, поэтому в ISCEO иностранный язык изучается с
@@ -26,8 +28,9 @@
       </p>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>2. НЕБОЛЬШИЕ ГРУППЫ ИЗУЧЕНИЯ.</b> Урок иностранного языка в ISCEO организован с небольшими группами по 2-6
         ученик в каждой, что способствует социализации учеников, обеспечивая при этом временное пространство,
@@ -36,23 +39,25 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_4.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>3. ТЕСТИРОВАНИЕ УРОВНЯ РАЗВИТИЯ ЯЗЫКОВОЙ КОМПЕТЕНТНОСТИ</b> - это первый шаг в индивидуальном подходе каждого
         ученика. Мы также используем ряд психологических тестов, по просьбе ученика или его / ее родителей, для
         разработки рабочей стратегии, максимально приближенной к психологическому портрету ученика.
       </p>
     </div>
   </div>
+  <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>4. ЛИТЕРАТУРА, ИЗДАННАЯ ОКСФОРДОМ и КЕМБРИДЖЕМ,</b> является ценным активом в нашей работе. Руководства,
         сопровождаемые рабочими тетрадями, компакт-дисками и аудио / видео дисками, способны пробудить и поддержать
@@ -61,27 +66,26 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_5.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
+    <br>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_6.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>5. A big VARIETY of PROGRAMS for EVERY AGE GROUP.</b> ISCEO offers quality and continuity through multiple
         educational opportunities created for different ages: children, pre-adolescents, teenagers, adults, in order
         to help them grow both academically and personally.
 
-        <b>5. БОЛЬШОЕ РАЗНООБРАЗИЕ ПРОГРАММ ДЛЯ КАЖДОЙ ВОЗРАСТНОЙ ГРУППЫ.</b> ISCEO предлагает качество и непрерывность
-        благодаря множеству образовательных возможностей, созданных для разных возрастов: детей, подростков, подростков,
-        взрослых, чтобы помочь им расти как в учебе, так и в личной жизни.
       </p>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 static">
       <p>
         <b>6. НЕСКОЛЬКО ОБРАЗОВАТЕЛЬНЫХ ВОЗМОЖНОСТЕЙ.</b> Разнообразные услуги, которые мы предоставляем, превращают
         иностранный язык из школьного предмета в языковую мотивацию, способную направлять наших учеников в реальных
@@ -90,15 +94,16 @@
       </p>
     </div>
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_7.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-sm-4">
-      insert image
+      <%= image_tag 'academic_8.jpg', alt: "Picture", class: 'img-fluid img-static' %>
     </div>
-    <div class="col-sm-8">
-      <p>
+    <div class="col-sm-8 static">
+      <p class="static-academic">
         <b>7. ПОДГОТОВКА К НАЦИОНАЛЬНЫМ ЭКЗАМЕНАМ</b> (Бакалавриат) и <b>МЕЖДУНАРОДНЫЕ ЭКЗАМЕНЫ</b> (TOEFL и IELTS)
         направлена на поддержку тех, кто стремится улучшить свои школьные результаты в Республике Молдова, и тех, кто
         собирается продолжить обучение за границей. Этот курс проводится как в течение учебного года, так и во время
