--- a/app/views/pages/international_camps.en.html.erb
+++ b/app/views/pages/international_camps.en.html.erb
@@ -2,35 +2,55 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        On the eve of the summer holiday, parents usually ask themselves how to organize their children's holiday as
-        interesting and effective as possible because everyone wants time for fun, sports, socializing, but also for
-        growth, for example, in studying a foreign language. The ideal solution could be a trip to one of the
-        international linguistic centers where children would familiarise with the country's history and culture, make
-        new friends from all corners of the world and realize that a foreign language must and can be mastered a lot
-        easier, in the captivating lessons organized by native speakers.
-      </p>
-      <p>
-        ISCEO gives parents the chance to fulfill their wishes and invites children and young adults (aged 9-19) to
-        attend summer schools organized in the UK, Europe and the US. You can choose from the programs we offer,
-        depending on the language you want to learn, your age and your preferred country. This offer targets both
-        individuals and groups.
-      </p>
-      <p>
+    <p class="col-sm-7 static">
+      On the eve of the summer holiday, parents usually ask themselves how to organize their children's holiday as
+      interesting and effective as possible because everyone wants time for fun, sports, socializing, but also for
+      growth, for example, in studying a foreign language. The ideal solution could be a trip to one of the
+      international linguistic centers where children would familiarise with the country's history and culture, make
+      new friends from all corners of the world and realize that a foreign language must and can be mastered a lot
+      easier, in the captivating lessons organized by native speakers.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'international_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7 static">
+      ISCEO gives parents the chance to fulfill their wishes and invites children and young adults (aged 9-19) to
+      attend summer schools organized in the UK, Europe and the US. You can choose from the programs we offer,
+      depending on the language you want to learn, your age and your preferred country. This offer targets both
+      individuals and groups.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'international_1.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'international_4.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         By opting for ISCEO services, you have the unique opportunity to combine language learning with relaxation, fun
         and exciting excursions. The organizers assume the responsibility of supporting parents in preparing the set of
         necessary travel documents and accompanying children to the program (on a group trip), which, over our ten years
         of activity, has proved to be a important factor in ensuring a favorable psychological climate for both children
         and their parents.
       </p>
-      <p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'international_2.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         At the end of the program, the participants obtain a certificate reflecting the linguistic progress during the
         course, attesting to the current level of competence and linguistic performance.
       </p>
-    </div>
-    <div class="col-sm-4">
-      insert imagae
     </div>
   </div>
 </div>
