--- a/app/views/pages/international_camps.ro.html.erb
+++ b/app/views/pages/international_camps.ro.html.erb
@@ -2,36 +2,56 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        În ajunul vacanţei de vară părinţii, de obicei, se întreabă cum să organizeze odihna copiilor cît mai
-        interesant şi eficient, căci fiecare îşi doreşte timp pentru distracţie, sport, socializare, dar şi pentru
-        creştere, de exemplu, în ceea ce priveşte studierea unei limbi străine. Soluţia ideală ar putea fi o călătorie
-        în unul dintre centrele lingvistice internaţionale în cadrul căreia copiii s-ar familiariza cu istoria şi
-        cultura ţării respective şi-ar face prieteni noi din toate colţurile lumii şi ar conştientiza faptul că limba
-        străină trebuie şi poate fi însuşită, îndeosebi în cadrul lecţiilor captivante organizate de profesorii
-        vorbitori nativi.
-      </p>
-      <p>
+    <p class="col-sm-7 static">
+      În ajunul vacanţei de vară părinţii, de obicei, se întreabă cum să organizeze odihna copiilor cît mai
+      interesant şi eficient, căci fiecare îşi doreşte timp pentru distracţie, sport, socializare, dar şi pentru
+      creştere, de exemplu, în ceea ce priveşte studierea unei limbi străine. Soluţia ideală ar putea fi o călătorie
+      în unul dintre centrele lingvistice internaţionale în cadrul căreia copiii s-ar familiariza cu istoria şi
+      cultura ţării respective şi-ar face prieteni noi din toate colţurile lumii şi ar conştientiza faptul că limba
+      străină trebuie şi poate fi însuşită, îndeosebi în cadrul lecţiilor captivante organizate de profesorii
+      vorbitori nativi.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'international_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7 static">
         ISCEO le oferă părinţilor şansa de a-şi realiza doleanţele şi invită copiii şi tinerii (cu vârsta cuprinsă
         între 9-19 ani) să participe la şcolile de vară organizate în Marea Britanie, Europa şi SUA. Aveţi posibilitatea
         de a alege dintre programele propuse în continuare în funcţie de limba dorită, vârsta copilului şi ţara
         preferată. Această ofertă vizează atît participări în grup cît şi individuale.
-      </p>
-      <p>
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'international_1.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'international_4.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         Optând pentru serviciile ISCEO, aveţi inedita oportunitate de a îmbina învăţarea unei limbi străine cu odihna,
         distractia şi excursiile de excepţie. Organizatorii îşi asumă responsabilitatea de a susţine părinţii în
         pregătirea setului de acte necesare pentru călătorie şi de a-i însoţi pe copii în cadrul programului (în cazul
         călătoriei în grup), fapt care, pe parcursul a zece ani de activitate, s-a dovedit a fi un factor
         important ce asigură un climat psihologic favorabil atît pentru copii cît şi pentru părinţii acestora.
       </p>
-      <p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'international_2.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         La finalul programului, participanţii obţin un certificat ce reflectă progresul lingvistic în cadrul cursului,
         atestând nivelul actual de competenţă şi performanţă lingvistică.
       </p>
-    </div>
-    <div class="col-sm-4">
-      insert imagae
     </div>
   </div>
 </div>
