--- a/app/views/pages/international_camps.ru.html.erb
+++ b/app/views/pages/international_camps.ru.html.erb
@@ -2,35 +2,55 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
-      <p>
-        В преддверии летних каникул родители обычно задаются вопросом, как организовать праздник своих детей как можно
-        более интересным и эффективным, потому что всем нужно время для веселья, занятий спортом, общения, а также для
-        роста, например, в изучении иностранного языка. Идеальным решением может быть поездка в один из международных
-        лингвистических центров, где дети будут знакомиться с историей и культурой страны, заводить новых друзей со
-        всех уголков мира и понимать, что иностранный язык должен и может быть освоен намного легче, в увлекательные
-        уроки, организованные носителями языка.
-      </p>
-      <p>
-        ISCEO дает родителям возможность исполнить их желания и приглашает детей и молодых людей (в возрасте от 9 до
-        19 лет) посещать летние школы, организованные в Великобритании, Европе и США. Вы можете выбрать одну из
-        программ, которые мы предлагаем, в зависимости от языка, который вы хотите изучать, вашего возраста и
-        предпочитаемой страны. Это предложение предназначено как для отдельных лиц, так и для групп.
-      </p>
-      <p>
+    <p class="col-sm-7 static">
+      В преддверии летних каникул родители обычно задаются вопросом, как организовать праздник своих детей как можно
+      более интересным и эффективным, потому что всем нужно время для веселья, занятий спортом, общения, а также для
+      роста, например, в изучении иностранного языка. Идеальным решением может быть поездка в один из международных
+      лингвистических центров, где дети будут знакомиться с историей и культурой страны, заводить новых друзей со
+      всех уголков мира и понимать, что иностранный язык должен и может быть освоен намного легче, в увлекательные
+      уроки, организованные носителями языка.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'international_3.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <p class="col-sm-7 static">
+      ISCEO дает родителям возможность исполнить их желания и приглашает детей и молодых людей (в возрасте от 9 до
+      19 лет) посещать летние школы, организованные в Великобритании, Европе и США. Вы можете выбрать одну из
+      программ, которые мы предлагаем, в зависимости от языка, который вы хотите изучать, вашего возраста и
+      предпочитаемой страны. Это предложение предназначено как для отдельных лиц, так и для групп.
+    </p>
+    <div class="col-sm-5">
+      <%= image_tag 'international_1.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'international_4.jpg', alt: "Picture", class: 'img-fluid img-static' %>
+    </div>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         Выбирая услуги ISCEO, вы получаете уникальную возможность сочетать изучение языка с расслабляющими, веселыми и
         увлекательными экскурсиями. Организаторы берут на себя ответственность за оказание поддержки родителям в
         подготовке комплекта необходимых проездных документов и сопровождении детей в программу (в групповой поездке),
         что за десять лет нашей деятельности оказалось важным фактором обеспечения благоприятного психологического
         состояния. климат для детей и их родителей.
       </p>
-      <p>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= image_tag 'international_2.jpg', alt: "Picture", class: 'img-fluid img-static img-hidden' %>
+    </div>
+    <div class="static col-sm-7">
+      <p class="static-accademic">
         В конце программы участники получают сертификат, отражающий лингвистический прогресс в течение курса,
         свидетельствующий о текущем уровне компетентности и языковой эффективности.
       </p>
-    </div>
-    <div class="col-sm-4">
-      insert imagae
     </div>
   </div>
 </div>
